<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="6dp"
    android:background="@color/white">

    <!-- 外層 LinearLayout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Scrollable 區域 -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:id="@+id/layout_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <!-- 目前 API URL -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <TextView
                        android:text="@string/desc_setting_api"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="16dp"
                        android:minHeight="48dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">
                    <EditText
                        android:id="@+id/etApiUrl"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:inputType="textUri|textNoSuggestions"
                        android:hint="@string/desc_setting_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:minHeight="48dp"
                        android:background="@android:drawable/edit_text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="12dp">

                    <TextView
                        android:text="@string/desc_setting_limit_window"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:layout_marginEnd="16dp"
                        android:minHeight="48dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="8dp">

                    <EditText
                        android:id="@+id/etLimitWindowSec"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:padding="8dp"
                        android:inputType="number"
                        android:hint="@string/desc_setting_limit_window_hint"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="no"
                        android:minHeight="48dp"
                        android:background="@android:drawable/edit_text"/>
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <!-- 底部按鈕 -->
        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desc_setting_test_save"
            android:layout_margin="16dp"
            android:padding="12dp"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:minHeight="48dp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
